# corophage

./: CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PERF.md  README.md  index.html  robots.txt  search_index.en.js  sitemap.xml  style.css
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  pages.yml  release.yml
benches/: effects.rs
corophage/: Cargo.toml
corophage-macros/: Cargo.toml
corophage-macros/src/: effect.rs  effectful.rs  lib.rs
corophage/benches/: effects.rs  stress.rs
corophage/examples/: choreography.rs  debugger.rs  saga.rs  sync.rs
corophage/src/: control.rs  coproduct.rs  coroutine.rs  dyn_dispatch.rs  effect.rs  lib.rs  macros.rs  prelude.rs  program.rs
corophage/tests/compile_fail/: effectful_async_fn.rs  effectful_spread_not_last.rs  effectful_spread_not_last.stderr
corophage/tests/it/: asynk.rs  cancel.rs  common.rs  downstream.rs  dyn_dispatch.rs  error.rs  gat_resume.rs  invoke.rs  macros.rs  main.rs  non_static.rs  proc_macros.rs  program.rs  repro_mut_borrow.rs  resume.rs  send.rs  success.rs  sync.rs
docs/: config.toml  index.html  justfile
docs/advanced/: index.html
docs/content/: _index.md
docs/content/docs/: _index.md  advanced.md  effects.md  example-debugger.md  example-saga.md  getting-started.md  handlers.md  performance.md  programs.md  state.md
docs/effects/: index.html
docs/getting-started/: index.html
docs/handlers/: index.html
docs/performance/: index.html
docs/programs/: index.html
docs/public/: index.html  robots.txt  search_index.en.js  sitemap.xml  style.css
docs/public/docs/: index.html
docs/public/docs/advanced/: index.html
docs/public/docs/effects/: index.html
docs/public/docs/getting-started/: index.html
docs/public/docs/handlers/: index.html
docs/public/docs/performance/: index.html
docs/public/docs/programs/: index.html
docs/public/docs/state/: index.html
docs/sass/: style.scss
docs/scripts/: generate_llms_txt.py
docs/state/: index.html
docs/templates/: base.html  index.html  page.html  section.html
examples/: asynk.rs  compose.rs  sync.rs
macros/: Cargo.toml
macros/src/: effectful.rs
src/: control.rs  coproduct.rs  coproduct2.rs  coroutine.rs  effect.rs  handler.rs  lib.rs  locality.rs  macros.rs  prelude.rs  program.rs  unique.rs
tests/: simple.rs
tests/compile_fail/: effectful_async_fn.stderr
tests/it/: asynk.rs  cancel.rs  common.rs  error.rs  gat_resume.rs  invoke.rs  main.rs  non_static.rs  proc_macros.rs  program.rs  resume.rs  send.rs  success.rs  sync.rs
