[package]
name = "corophage"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Romain Ruetschi <github@romac.me>"]
description = "An effect handler library for Rust"
homepage = "https://github.com/romac/corophage"
repository = "https://github.com/romac/corophage"

[dependencies]
fauxgen = { version = "0.1" }
frunk_core = { version = "0.4", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
